bug report - outstanding bugs are listed here:

 http://sourceforge.net/tracker/?atid=106663&group_id=6663&func=browse

(to file another bug see the 'submit bug' button on that page).

====================================================================

0.76: please submit patches for this section with actual code/doc
      patches!

* documented the equivalent '[..]' expressions for "required"
  etc. Request from Ross Patterson (Bug 529078 - agmorgan).
* '[...]' parsing: document it and also fix it to support '\]' escape
  sequence. Feature request from Russell Kliese (Bug 517064 -
  agmorgan).
* pam_rootok: compilation warning noted by Tony den Haan wrt no
  prototype for strcmp() (Bug 557322 - agmorgan).
* documentation: (a few of mine in passing) and app documentation
  suggestions regarding PAM environment variables and module
  documentation changes regarding the conversation function from Jenn
  Vesperman (Bug 527821, 527965 - agmorgan)
* documentation: pam_time.sgml typo fixed, pam_motd exists now,
  correct Red Hat comment about config files (Bugs 554274, 554261,
  554182 - agmorgan)
* pam_limits: added '%' domain for maxlogins limiting, now '*' and @group
  have the old meaning (every) and '%' the new one (all)
  (Bug 533664 - baggins)
* pam_limits: put not so interesting log messages under debug arg
  (Bug 533668 - baggins)
* pam_access: added the 'fieldsep=' argument (Bug 547051 - agmorgan),
  made a PAM_RHOST of "" equivalent to NULL (Bug 547521 - agmorgan).
* pam_limits: keep well know behaviour of maxlogins default ('*') limit
  (Bug 533664 - baggins)
* pam_unix: more from Nalin log password changes (Bug 517743 - agmorgan)
* pam_limits: make it use the priority value specified in config
  (bug 530428 - baggins)
* pam_unix: removed broken code in password update code. Report from
  Len Lattanzi (Bug 507379 - agmorgan)
* pam_mkhomedir: recurse directories. Patch from Nalin (Bug 476981 -
  agmorgan)