@@ -55,6 +55,7 @@ HAVE_LIBPWDB=@HAVE_LIBPWDB@
 # documentation support
 HAVE_SGML2TXT=@HAVE_SGML2TXT@
 HAVE_SGML2HTML=@HAVE_SGML2HTML@
+HAVE_PS2PDF=@HAVE_PS2PDF@
 PSER=@PSER@
 DOCDIR=@DOCDIR@
 MANDIR=@MANDIR@
